// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Position center 1`] = `
.pf-l-alignment.pf-m-center {
  display: block;
  padding: 0px;
  margin: 0px;
  text-align: center;
}

<div
  className="pf-l-alignment pf-m-center"
>
  content
</div>
`;

exports[`Position left 1`] = `
.pf-l-alignment.pf-m-left {
  display: block;
  padding: 0px;
  margin: 0px;
  text-align: left;
}

<div
  className="pf-l-alignment pf-m-left"
>
  content
</div>
`;

exports[`Position right 1`] = `
.pf-l-alignment.pf-m-right {
  display: block;
  padding: 0px;
  margin: 0px;
  text-align: right;
}

<div
  className="pf-l-alignment pf-m-right"
>
  content
</div>
`;
